--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles/album.css">
     <link rel="stylesheet" type="text/css" href="styles/player-bar.css">
     <link rel="stylesheet" type="text/css" href="styles/song-list.css">
+
   </head>
   <body>
     <!-- Top bar -->
@@ -82,5 +83,6 @@
     <script src="scripts/album-info.js"></script>
     <script src="scripts/song-list.js"></script>
     <script src="scripts/player-bar.js"></script>
+    <script src="scripts/helper.js"></script>
   </body>
 </html>
