--- a/index.html
+++ b/index.html
@@ -77,10 +77,15 @@
     <!-- Scripts  -->
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.min.js"></script>
+
+    <!-- below: added from checkpoint 11 assignment-->
+    <script src="scripts/helper.js"></script>
+
     <script src="scripts/album-data.js"></script>
     <script src="scripts/player.js"></script>
     <script src="scripts/album-info.js"></script>
     <script src="scripts/song-list.js"></script>
     <script src="scripts/player-bar.js"></script>
+
   </body>
 </html>
