--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     </section>
 
     <!-- Scripts  -->
-    <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.min.js"></script>
     <script src="scripts/album-data.js"></script>
     <script src="scripts/player.js"></script>
     <script src="scripts/album-info.js"></script>
