--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <!-- Album Details -->
         <div class="album-details">
           <h1 id="album-title"></h1>
-          <h2 class="artist"></h2>
-          <div id="release-info"></div>
+          <h2 class="artist">Pablo Picaso</h2>
+          <div id="release-info">1909 Spanish Records</div>
         </div>
       </section>
 
@@ -36,11 +36,11 @@
           <col id="song-number-column">
           <col id="song-title-column">
           <col id="song-duration-column">
-        </colgroup>  
+        </colgroup>
       </table>
 
     </main>
-    
+
     <!-- Player Bar  -->
     <section id="player-bar">
       <section id="buttons">
@@ -71,7 +71,7 @@
         <div class="icon ion-volume-high"></div>
       </div>
 
-      
+
     </section>
 
     <!-- Scripts  -->
